[tool.poetry]
name = "python-test-david-isaza"
version = "0.1.0"
description = ""
authors = ["Agajanth <santiagoisaza0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.2"
Sphinx = "^5.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
